First Approach for the Main View with FXML

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -1,1 +1,29 @@
 stage-title=Autoverwaltung
+
+# Main View Strings
+table-view-header-id=ID
+table-view-header-brand=Marke
+table-view-header-horsepower=Leistung [PS]
+table-view-header-dailyRate=Tagessatz [\u20AC]
+table-view-header-doorCount=Anzahl Türen
+table-view-header-drivenDistance=gefahrene Distanz [km]
+table-view-header-category=Kategorie
+table-view-header-color=Farbe
+table-view-header-constructionYear=Baujahr
+table-view-header-defects=Defekte
+table-view-header-fuel=Kraftstoff
+table-view-header-gearbox=Getriebe
+table-view-header-licenseNumber=Kennzeichen
+table-view-header-model=Modell
+table-view-header-nextInspection=nächste Inspektion
+table-view-header-parkingLot=Parkplatz
+table-view-header-tires=Bereifung
+table-view-header-vin=Fahrgestellnummer
+
+# Menubar Strings
+menubar-view-file=Datei
+menubar-view-edit=Bearbeiten
+menubar-view-help=Hilfe
+menubar-operation-close=Schliessen
+menubar-operation-delete=Löschen
+menubar-operation-about=Über ...
