--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -1,1 +1,29 @@
 stage-title=Carrental
+
+# Main View Strings
+table-view-header-id=ID
+table-view-header-brand=brand
+table-view-header-horsepower=horsepower [PS]
+table-view-header-dailyRate=daily rate [\u20AC]
+table-view-header-doorCount=door count
+table-view-header-drivenDistance=driven distance [km]
+table-view-header-category=category
+table-view-header-color=color
+table-view-header-constructionYear=construction year
+table-view-header-defects=defects
+table-view-header-fuel=fuel
+table-view-header-gearbox=gearbox
+table-view-header-licenseNumber=license number
+table-view-header-model=model
+table-view-header-nextInspection=next inspection
+table-view-header-parkingLot=parking lot
+table-view-header-tires=tires
+table-view-header-vin=vehicle ident number
+
+# Menubar Strings
+menubar-view-file=File
+menubar-view-edit=Edit
+menubar-view-help=Help
+menubar-operation-close=Close
+menubar-operation-delete=Delete
+menubar-operation-about=About ...
