Added a Controller to the CarTableView

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -20,6 +20,10 @@ table-view-header-parkingLot=Parkplatz
 table-view-header-tires=Bereifung
 table-view-header-vin=Fahrgestellnummer
 
+button-edit-label=Bearbeiten...
+button-new-label=Anlegen...
+button-delete-label=Löschen...
+
 # Menubar Strings
 menubar-view-file=Datei
 menubar-view-edit=Bearbeiten
