--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -20,6 +20,10 @@ table-view-header-parkingLot=parking lot
 table-view-header-tires=tires
 table-view-header-vin=vehicle ident number
 
+button-edit-label=Edit...
+button-new-label=New...
+button-delete-label=Delete...
+
 # Menubar Strings
 menubar-view-file=File
 menubar-view-edit=Edit
