Added Buttons and Methods for Controller

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -24,6 +24,9 @@ button-edit-label=Bearbeiten...
 button-new-label=Anlegen...
 button-delete-label=Löschen...
 
+dialog-delete-confirmation-title=Bestätigung
+dialog-delete-confirmation-header=Möchten Sie das ausgewählte Auto wirklich löschen?
+
 # Menubar Strings
 menubar-view-file=Datei
 menubar-view-edit=Bearbeiten
