--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -24,6 +24,9 @@ button-edit-label=Edit...
 button-new-label=New...
 button-delete-label=Delete...
 
+dialog-delete-confirmation-title=Confirmation
+dialog-delete-confirmation-header=Do you really want to remove the selected car?
+
 # Menubar Strings
 menubar-view-file=File
 menubar-view-edit=Edit
