First Approach on the New Car Creation View

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -34,3 +34,29 @@ menubar-view-help=Hilfe
 menubar-operation-close=Schliessen
 menubar-operation-delete=Löschen
 menubar-operation-about=Über ...
+
+#New Car View Strings
+new-car-brand-label=Marke
+new-car-model-label=Modell
+new-car-category-label=Kategorie
+new-car-color-label=Farbe
+new-car-constructionYear-label=Baujahr
+new-car-drivenDistance-label=Gefahrene Distanz [km]
+new-car-gearBox-label=Getriebe
+new-car-horsePower-label=Leistung [PS]
+new-car-fuel-label=Kraftstoff
+new-car-doorCount-label=Anzahl Türen
+new-car-tires-label=Bereifung
+new-car-nextInspection-label=Nächste Inspektion
+new-car-vin-label=VIN
+new-car-equipment-label=Ausstattung
+new-car-defects-label=Mängel
+new-car-licenceNumber-label=Kennzeichen
+new-car-dailyRate-label=Tagessatz [\u20AC]
+new-car-parkingLot-label=Parkplatz
+
+new-car-cancel-button=Abbruch
+new-car-apply-button=Anwenden
+
+dialog-cancel-creation-confirmation-title=Bestätigung
+dialog-cancel-creation-confirmation-header=Möchten Sie den Dialog, ein neues Auto anzulegen, wirklich abbrechen?
