--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -34,3 +34,29 @@ menubar-view-help=Help
 menubar-operation-close=Close
 menubar-operation-delete=Delete
 menubar-operation-about=About ...
+
+#New Car View Strings
+new-car-brand-label=Brand
+new-car-model-label=Model
+new-car-category-label=Category
+new-car-color-label=Color
+new-car-constructionYear-label=Construction Year
+new-car-drivenDistance-label=Driven Distance [km]
+new-car-gearBox-label=Gearbox
+new-car-horsePower-label=Horse Power [PS]
+new-car-fuel-label=Fuel
+new-car-doorCount-label=Door Count
+new-car-tires-label=Tires
+new-car-nextInspection-label=Next Inspection
+new-car-vin-label=VIN
+new-car-equipment-label=Equipment
+new-car-defects-label=Defects
+new-car-licenceNumber-label=License Number
+new-car-dailyRate-label=Daily Rate [\u20AC]
+new-car-parkingLot-label=Parking Lot
+
+new-car-cancel-button=Cancel
+new-car-apply-button=Apply
+
+dialog-cancel-creation-confirmation-title=Bestätigung
+dialog-cancel-creation-confirmation-header=Do you really want to cancel the dialog?
