Added ChoiceBoxes for gearbox and fuel

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -55,6 +55,14 @@ new-car-licenceNumber-label=Kennzeichen
 new-car-dailyRate-label=Tagessatz [\u20AC]
 new-car-parkingLot-label=Parkplatz
 
+new-car-gearBox-manual=Schaltgetriebe
+new-car-gearBox-semiautomatic=Halbautomatik
+new-car-gearBox-automatic=Automatik
+
+new-car-fuel-petrol=Benzin
+new-car-fuel-diesel=Diesel
+new-car-fuel-electric=Elektro
+
 new-car-cancel-button=Abbruch
 new-car-apply-button=Anwenden
 
