--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -55,6 +55,14 @@ new-car-licenceNumber-label=License Number
 new-car-dailyRate-label=Daily Rate [\u20AC]
 new-car-parkingLot-label=Parking Lot
 
+new-car-gearBox-manual=Manual
+new-car-gearBox-semiautomatic=Semi-automatic
+new-car-gearBox-automatic=Automatic
+
+new-car-fuel-petrol=Petrol
+new-car-fuel-diesel=Diesel
+new-car-fuel-electric=Electric
+
 new-car-cancel-button=Cancel
 new-car-apply-button=Apply
 
