Added Utilites Class for Standard GUI Dialogs

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -24,8 +24,10 @@ button-edit-label=Bearbeiten...
 button-new-label=Anlegen...
 button-delete-label=Löschen...
 
-dialog-delete-confirmation-title=Bestätigung
-dialog-delete-confirmation-header=Möchten Sie das ausgewählte Auto wirklich löschen?
+dialog-confirmation-title=Bestätigung
+dialog-information-title=Information
+dialog-confirmation-header-delete=Möchten Sie das ausgewählte Auto wirklich löschen?
+dialog-information-header-no-car-selected=Bitte zunächst zu löschendes Auto auswählen.
 
 # Menubar Strings
 menubar-view-file=Datei
