--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -24,8 +24,10 @@ button-edit-label=Edit...
 button-new-label=New...
 button-delete-label=Delete...
 
-dialog-delete-confirmation-title=Confirmation
-dialog-delete-confirmation-header=Do you really want to remove the selected car?
+dialog-confirmation-title=Confirmation
+dialog-information-title=Information
+dialog-confirmation-header-delete=Do you really want to remove the selected car?
+dialog-information-header-no-car-selected=Please select a car to remove first.
 
 # Menubar Strings
 menubar-view-file=File
