Renamed internalized Strings

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -35,36 +35,36 @@ menubar-operation-close=Schliessen
 menubar-operation-delete=Löschen
 menubar-operation-about=Über ...
 
-#New Car View Strings
-new-car-brand-label=Marke
-new-car-model-label=Modell
-new-car-category-label=Kategorie
-new-car-color-label=Farbe
-new-car-constructionYear-label=Baujahr
-new-car-drivenDistance-label=Gefahrene Distanz [km]
-new-car-gearBox-label=Getriebe
-new-car-horsePower-label=Leistung [PS]
-new-car-fuel-label=Kraftstoff
-new-car-doorCount-label=Anzahl Türen
-new-car-tires-label=Bereifung
-new-car-nextInspection-label=Nächste Inspektion
-new-car-vin-label=VIN
-new-car-equipment-label=Ausstattung
-new-car-defects-label=Mängel
-new-car-licenceNumber-label=Kennzeichen
-new-car-dailyRate-label=Tagessatz [\u20AC]
-new-car-parkingLot-label=Parkplatz
+#Car Configuration View Strings
+car-brand-label=Marke
+car-model-label=Modell
+car-category-label=Kategorie
+car-color-label=Farbe
+car-constructionYear-label=Baujahr
+car-drivenDistance-label=Gefahrene Distanz [km]
+car-gearBox-label=Getriebe
+car-horsePower-label=Leistung [PS]
+car-fuel-label=Kraftstoff
+car-doorCount-label=Anzahl Türen
+car-tires-label=Bereifung
+car-nextInspection-label=Nächste Inspektion
+car-vin-label=VIN
+car-equipment-label=Ausstattung
+car-defects-label=Mängel
+car-licenceNumber-label=Kennzeichen
+car-dailyRate-label=Tagessatz [\u20AC]
+car-parkingLot-label=Parkplatz
 
-new-car-gearBox-manual=Schaltgetriebe
-new-car-gearBox-semiautomatic=Halbautomatik
-new-car-gearBox-automatic=Automatik
+car-gearBox-manual=Schaltgetriebe
+car-gearBox-semiautomatic=Halbautomatik
+car-gearBox-automatic=Automatik
 
-new-car-fuel-petrol=Benzin
-new-car-fuel-diesel=Diesel
-new-car-fuel-electric=Elektro
+car-fuel-petrol=Benzin
+car-fuel-diesel=Diesel
+car-fuel-electric=Elektro
 
-new-car-cancel-button=Abbruch
-new-car-apply-button=Anwenden
+car-cancel-button=Abbruch
+car-apply-button=Anwenden
 
 dialog-cancel-creation-confirmation-title=Bestätigung
 dialog-cancel-creation-confirmation-header=Möchten Sie den Dialog, ein neues Auto anzulegen, wirklich abbrechen?
