--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -35,36 +35,36 @@ menubar-operation-close=Close
 menubar-operation-delete=Delete
 menubar-operation-about=About ...
 
-#New Car View Strings
-new-car-brand-label=Brand
-new-car-model-label=Model
-new-car-category-label=Category
-new-car-color-label=Color
-new-car-constructionYear-label=Construction Year
-new-car-drivenDistance-label=Driven Distance [km]
-new-car-gearBox-label=Gearbox
-new-car-horsePower-label=Horse Power [PS]
-new-car-fuel-label=Fuel
-new-car-doorCount-label=Door Count
-new-car-tires-label=Tires
-new-car-nextInspection-label=Next Inspection
-new-car-vin-label=VIN
-new-car-equipment-label=Equipment
-new-car-defects-label=Defects
-new-car-licenceNumber-label=License Number
-new-car-dailyRate-label=Daily Rate [\u20AC]
-new-car-parkingLot-label=Parking Lot
+#Car Configuration View Strings
+car-brand-label=Brand
+car-model-label=Model
+car-category-label=Category
+car-color-label=Color
+car-constructionYear-label=Construction Year
+car-drivenDistance-label=Driven Distance [km]
+car-gearBox-label=Gearbox
+car-horsePower-label=Horse Power [PS]
+car-fuel-label=Fuel
+car-doorCount-label=Door Count
+car-tires-label=Tires
+car-nextInspection-label=Next Inspection
+car-vin-label=VIN
+car-equipment-label=Equipment
+car-defects-label=Defects
+car-licenceNumber-label=License Number
+car-dailyRate-label=Daily Rate [\u20AC]
+car-parkingLot-label=Parking Lot
 
-new-car-gearBox-manual=Manual
-new-car-gearBox-semiautomatic=Semi-automatic
-new-car-gearBox-automatic=Automatic
+car-gearBox-manual=Manual
+car-gearBox-semiautomatic=Semi-automatic
+car-gearBox-automatic=Automatic
 
-new-car-fuel-petrol=Petrol
-new-car-fuel-diesel=Diesel
-new-car-fuel-electric=Electric
+car-fuel-petrol=Petrol
+car-fuel-diesel=Diesel
+car-fuel-electric=Electric
 
-new-car-cancel-button=Cancel
-new-car-apply-button=Apply
+car-cancel-button=Cancel
+car-apply-button=Apply
 
 dialog-cancel-creation-confirmation-title=Bestätigung
 dialog-cancel-creation-confirmation-header=Do you really want to cancel the dialog?
