--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -1,2 +1,3 @@
 car-tableview-fxml-file=/fxml/CarTableView.fxml
 new-car-creationview-fxml-file=/fxml/NewCarCreationView.fxml
+car-configurationview-fxml-file=/fxml/CarConfigurationView.fxml
