Added UI for filtering and implemented some menubar functionality

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -29,6 +29,33 @@ dialog-information-title=Information
 dialog-confirmation-header-delete=Möchten Sie das ausgewählte Auto wirklich löschen?
 dialog-information-header-no-car-selected=Bitte zunächst zu löschendes Auto auswählen.
 
+#Search Strings
+prompt-search-TextField=Suche...
+prompt-search-ComboBoxField=Feld auswählen
+prompt-search-ComboBoxComparator=Operator auswählen
+
+button-applyCurrentFilter-label=Suchen
+button-removeCurrentFilter-label=Filter löschen
+
+search-combobox-id=ID
+search-combobox-brand=Marke
+search-combobox-horsepower=Leistung [PS]
+search-combobox-dailyRate=Tagessatz [\u20AC]
+search-combobox-doorCount=Anzahl Türen
+search-combobox-drivenDistance=gefahrene Distanz [km]
+search-combobox-category=Kategorie
+search-combobox-color=Farbe
+search-combobox-constructionYear=Baujahr
+search-combobox-defects=Defekte
+search-combobox-fuel=Kraftstoff
+search-combobox-gearbox=Getriebe
+search-combobox-licenseNumber=Kennzeichen
+search-combobox-model=Modell
+search-combobox-nextInspection=nächste Inspektion
+search-combobox-parkingLot=Parkplatz
+search-combobox-tires=Bereifung
+search-combobox-vin=Fahrgestellnummer
+
 # Menubar Strings
 menubar-view-file=Datei
 menubar-view-edit=Bearbeiten
