--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -29,6 +29,33 @@ dialog-information-title=Information
 dialog-confirmation-header-delete=Do you really want to remove the selected car?
 dialog-information-header-no-car-selected=Please select a car to remove first.
 
+#Search Strings
+prompt-search-TextField=Search...
+prompt-search-ComboBoxField=Choose field
+prompt-search-ComboBoxComparator=Choose comparator
+
+button-applyCurrentFilter-label=Search
+button-removeCurrentFilter-label=Clear filter
+
+search-combobox-id=ID
+search-combobox-brand=brand
+search-combobox-horsepower=horsepower [PS]
+search-combobox-dailyRate=daily rate [\u20AC]
+search-combobox-doorCount=door count
+search-combobox-drivenDistance=driven distance [km]
+search-combobox-category=category
+search-combobox-color=color
+search-combobox-constructionYear=construction year
+search-combobox-defects=defects
+search-combobox-fuel=fuel
+search-combobox-gearbox=gearbox
+search-combobox-licenseNumber=license number
+search-combobox-model=model
+search-combobox-nextInspection=next inspection
+search-combobox-parkingLot=parking lot
+search-combobox-tires=tires
+search-combobox-vin=vehicle ident number
+
 # Menubar Strings
 menubar-view-file=File
 menubar-view-edit=Edit
