Format FXML. Added Menubar functionality and new MenuItems

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -23,11 +23,13 @@ table-view-header-vin=Fahrgestellnummer
 button-edit-label=Bearbeiten...
 button-new-label=Anlegen...
 button-delete-label=Löschen...
+button-rent-label=Vermieten...
 
 dialog-confirmation-title=Bestätigung
 dialog-information-title=Information
 dialog-confirmation-header-delete=Möchten Sie das ausgewählte Auto wirklich löschen?
 dialog-information-header-no-car-selected=Bitte zunächst zu löschendes Auto auswählen.
+dialog-information-header-about=Diese Software ist ein Studentenprojekt zur Implementierung einer Autoverwaltung/Autovermietung.\nEntwickelt von Lukas Raubuch, Arthur Kelsch, Michael Bös, Jens Thewes, Hagen Schackmann, Julian Quint
 
 #Search Strings
 prompt-search-TextField=Suche...
@@ -56,12 +58,18 @@ search-combobox-parkingLot=Parkplatz
 search-combobox-tires=Bereifung
 search-combobox-vin=Fahrgestellnummer
 
+search-combobox-equals==
+search-combobox-greater=>
+search-combobox-smaller=<
+search-combobox-like=like
+
 # Menubar Strings
 menubar-view-file=Datei
 menubar-view-edit=Bearbeiten
 menubar-view-help=Hilfe
 menubar-operation-close=Schliessen
 menubar-operation-delete=Löschen
+menubar-operation-edit=Bearbeiten...
 menubar-operation-about=Über ...
 
 #Car Configuration View Strings
