--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -23,11 +23,13 @@ table-view-header-vin=vehicle ident number
 button-edit-label=Edit...
 button-new-label=New...
 button-delete-label=Delete...
+button-rent-label=Rent...
 
 dialog-confirmation-title=Confirmation
 dialog-information-title=Information
 dialog-confirmation-header-delete=Do you really want to remove the selected car?
 dialog-information-header-no-car-selected=Please select a car to remove first.
+dialog-information-header-about=This software is a studentproject to implement a carrental application.\nDeveloped by: Lukas Raubuch, Arthur Kelsch, Michael Bös, Jens Thewes, Hagen Schackmann, Julian Quint
 
 #Search Strings
 prompt-search-TextField=Search...
@@ -56,12 +58,18 @@ search-combobox-parkingLot=parking lot
 search-combobox-tires=tires
 search-combobox-vin=vehicle ident number
 
+search-combobox-equals==
+search-combobox-greater=>
+search-combobox-smaller=<
+search-combobox-like=like
+
 # Menubar Strings
 menubar-view-file=File
 menubar-view-edit=Edit
 menubar-view-help=Help
 menubar-operation-close=Close
 menubar-operation-delete=Delete
+menubar-operation-edit=Edit...
 menubar-operation-about=About ...
 
 #Car Configuration View Strings
