Beginning of Employee View

--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -63,6 +63,11 @@ search-combobox-greater=>
 search-combobox-smaller=<
 search-combobox-like=like
 
+search-employee-combobox-id=ID
+search-employee-combobox-firstName=Vorname
+search-employee-combobox-lastName=Nachname
+search-employee-combobox-position=Position
+
 # Menubar Strings
 menubar-view-file=Datei
 menubar-view-edit=Bearbeiten
@@ -71,6 +76,10 @@ menubar-operation-close=Schliessen
 menubar-operation-delete=Löschen
 menubar-operation-edit=Bearbeiten...
 menubar-operation-about=Über ...
+menubar-operation-employees=Mitarbeiter
+menubar-operation-cars=Autos
+menubar-operation-rentals=Vermietungen
+menubar-operation-customers=Kunden
 
 #Car Configuration View Strings
 car-brand-label=Marke
