--- a/src/main/resources/components_en.properties
+++ b/src/main/resources/components_en.properties
@@ -63,6 +63,11 @@ search-combobox-greater=>
 search-combobox-smaller=<
 search-combobox-like=like
 
+search-employee-combobox-id=ID
+search-employee-combobox-firstName=First Name
+search-employee-combobox-lastName=Last Name
+search-employee-combobox-position=Position
+
 # Menubar Strings
 menubar-view-file=File
 menubar-view-edit=Edit
@@ -71,6 +76,10 @@ menubar-operation-close=Close
 menubar-operation-delete=Delete
 menubar-operation-edit=Edit...
 menubar-operation-about=About ...
+menubar-operation-employees=Employess
+menubar-operation-cars=Cars
+menubar-operation-rentals=Rentals
+menubar-operation-customers=Customers
 
 #Car Configuration View Strings
 car-brand-label=Brand
