--- a/src/main/resources/components_de.properties
+++ b/src/main/resources/components_de.properties
@@ -20,6 +20,37 @@ table-view-header-parkingLot=Parkplatz
 table-view-header-tires=Bereifung
 table-view-header-vin=Fahrgestellnummer
 
+# Employee Table View
+table-view-employee-header-id=ID
+table-view-employee-header-firstName=Vorname
+table-view-employee-header-lastName=Nachname
+table-view-employee-header-position=Position
+
+# Customer Table View
+table-view-customer-header-id=ID
+table-view-customer-header-dateOfBirth=Geburtsdatum
+table-view-customer-header-driverLicenseId=Führerscheinnummer
+table-view-customer-header-emailAddress=Email Addresse
+table-view-customer-header-firstName=Vorname
+table-view-customer-header-lastName=Nachname
+table-view-customer-header-phoneNumber=Telefonnummer
+table-view-customer-header-houseNumber=Hausnummer
+table-view-customer-header-street=Straße
+table-view-customer-header-city=Stadt
+table-view-customer-header-idNumber=Ausweisnummer
+table-view-customer-header-zipCode=Postleitzahl
+
+# Rental Table View
+table-view-rental-header-id=ID
+table-view-rental-header-begin=Beginn
+table-view-rental-header-car=Auto
+table-view-rental-header-customer=Kunde
+table-view-rental-header-employee=Mitarbeiter
+table-view-rental-header-end=Ende
+table-view-rental-header-extraCosts=Aufpreis
+table-view-rental-header-note=Notiz
+
+
 button-edit-label=Bearbeiten...
 button-new-label=Anlegen...
 button-delete-label=Löschen...
@@ -27,8 +58,8 @@ button-rent-label=Vermieten...
 
 dialog-confirmation-title=Bestätigung
 dialog-information-title=Information
-dialog-confirmation-header-delete=Möchten Sie das ausgewählte Auto wirklich löschen?
-dialog-information-header-no-car-selected=Bitte zunächst zu löschendes Auto auswählen.
+dialog-confirmation-header-delete=Möchten Sie das ausgewählte Objekt wirklich löschen?
+dialog-information-header-no-object-selected=Bitte zunächst zu löschendes Objekt auswählen.
 dialog-information-header-about=Diese Software ist ein Studentenprojekt zur Implementierung einer Autoverwaltung/Autovermietung.\nEntwickelt von Lukas Raubuch, Arthur Kelsch, Michael Bös, Jens Thewes, Hagen Schackmann, Julian Quint
 
 #Search Strings
@@ -68,6 +99,28 @@ search-employee-combobox-firstName=Vorname
 search-employee-combobox-lastName=Nachname
 search-employee-combobox-position=Position
 
+search-customer-combobox-id=ID
+search-customer-combobox-dateOfBirth=Geburtsdatum
+search-customer-combobox-driverLicenseId=Führerscheinnummer
+search-customer-combobox-emailAddress=Email Adresse
+search-customer-combobox-firstName=Vorname
+search-customer-combobox-houseNumber=Hausnummer
+search-customer-combobox-lastName=Nachname
+search-customer-combobox-phoneNumber=Telefonnummer
+search-customer-combobox-street=Straße
+search-customer-combobox-city=Stadt
+search-customer-combobox-idNumber=Ausweisnummer
+search-customer-combobox-zipCode=Postleitzahl
+
+search-rental-combobox-id=ID
+search-rental-combobox-begin=Beginn
+search-rental-combobox-car=Auto
+search-rental-combobox-customer=Kunde
+search-rental-combobox-employee=Mitarbeiter
+search-rental-combobox-end=Ende
+search-rental-combobox-extraCosts=Aufpreis
+search-rental-combobox-note=Notiz
+
 # Menubar Strings
 menubar-view-file=Datei
 menubar-view-edit=Bearbeiten
@@ -75,6 +128,8 @@ menubar-view-help=Hilfe
 menubar-operation-close=Schliessen
 menubar-operation-delete=Löschen
 menubar-operation-edit=Bearbeiten...
+menubar-operation-new=Neu...
+menubar-operation-rent=Vermieten...
 menubar-operation-about=Über ...
 menubar-operation-employees=Mitarbeiter
 menubar-operation-cars=Autos
