Implementation NewEmployeeView + EditEmployeeView

--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -167,5 +167,16 @@ car-fuel-electric=Electric
 car-cancel-button=Cancel
 car-apply-button=Apply
 
-dialog-cancel-creation-confirmation-title=Bestätigung
+dialog-cancel-creation-confirmation-title=Confirmation
 dialog-cancel-creation-confirmation-header=Do you really want to cancel the dialog?
+
+dialog-apply-creation-confirmation-title=Confirmation
+dialog-apply-creation-confirmation-header=Do you really want to apply?
+
+#Employee View Strings
+first-name-label=First Name
+last-name-label=Last Name
+position-label=Position
+
+cancel-button=Cancel
+apply-button=Apply
