--- a/src/main/resources/bundles/strings_de.properties
+++ b/src/main/resources/bundles/strings_de.properties
@@ -4,3 +4,5 @@ car-configurationview-fxml-file=/fxml/CarConfigurationView.fxml
 employee-tableview-fxml-file=/fxml/EmployeeTableView.fxml
 rental-tableview-fxml-file=/fxml/RentalTableView.fxml
 customer-tableview-fxml-file=/fxml/CustomerTableView.fxml
+new-employeeview-fxml-file=/fxml/NewEmployeeView.fxml
+edit-employeeview-fxml-file=/fxml/EditEmployeeView.fxml
