Implementation NewCustomerView + EditCustomerView

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -168,4 +168,23 @@ car-cancel-button=Abbruch
 car-apply-button=Anwenden
 
 dialog-cancel-creation-confirmation-title=Bestätigung
-dialog-cancel-creation-confirmation-header=Möchten Sie den Dialog, ein neues Auto anzulegen, wirklich abbrechen?
+dialog-cancel-creation-confirmation-header=Möchten Sie den Dialog wirklich abbrechen?
+
+dialog-apply-creation-confirmation-title=Bestätigung
+dialog-apply-creation-confirmation-header=Möchten Sie wirklich anwenden?
+
+#Customer View Strings
+first-name-label=Vorname
+last-name-label=Nachname
+email-label=Email
+phonenumber-label=Telefonnummer
+dateofbrith-label=Geburtsdatum
+street-label=Straße
+housenumber-label=Hausnummer
+city-label=Stadt
+zipcode-label=PLZ
+idnumber-label=Ausweisnummer
+driverlicenseid-label=Führerscheinnummer
+
+cancel-button=Abbruch
+apply-button=Anwenden
