--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -167,5 +167,24 @@ car-fuel-electric=Electric
 car-cancel-button=Cancel
 car-apply-button=Apply
 
-dialog-cancel-creation-confirmation-title=Bestätigung
+dialog-cancel-creation-confirmation-title=Confirmation
 dialog-cancel-creation-confirmation-header=Do you really want to cancel the dialog?
+
+dialog-apply-creation-confirmation-title=Confirmation
+dialog-apply-creation-confirmation-header=Do you really want to apply?
+
+#Customer View Strings
+first-name-label=First Name
+last-name-label=Last Name
+email-label=Email
+phonenumber-label=Phone Number
+dateofbrith-label=Date of Birth
+street-label=Street
+housenumber-label=House Number
+city-label=City
+zipcode-label=Zip Code
+idnumber-label=ID Number
+driverlicenseid-label=Driver License ID
+
+cancel-button=Cancel
+apply-button=Apply
