Adjust menubar texts

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -125,12 +125,12 @@ search-rental-combobox-note=Notiz
 menubar-view-file=Datei
 menubar-view-edit=Bearbeiten
 menubar-view-help=Hilfe
-menubar-operation-close=Schliessen
+menubar-operation-close=Schließen
 menubar-operation-delete=Löschen
-menubar-operation-edit=Bearbeiten...
-menubar-operation-new=Neu...
-menubar-operation-rent=Vermieten...
-menubar-operation-about=Über ...
+menubar-operation-edit=Bearbeiten
+menubar-operation-new=Neu
+menubar-operation-rent=Vermieten
+menubar-operation-about=Über
 menubar-operation-employees=Mitarbeiter
 menubar-operation-cars=Autos
 menubar-operation-rentals=Vermietungen
