--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -127,10 +127,10 @@ menubar-view-edit=Edit
 menubar-view-help=Help
 menubar-operation-close=Close
 menubar-operation-delete=Delete
-menubar-operation-edit=Edit...
-menubar-operation-new=New...
-menubar-operation-rent=Rent...
-menubar-operation-about=About ...
+menubar-operation-edit=Edit
+menubar-operation-new=New
+menubar-operation-rent=Rent
+menubar-operation-about=About
 menubar-operation-employees=Employees
 menubar-operation-cars=Cars
 menubar-operation-rentals=Rentals
