Refactoring components_*.properties

--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -1,134 +1,42 @@
+# General Strings
 stage-title=Carrental
 
-# Main View Strings
-table-view-header-id=ID
-table-view-header-brand=brand
-table-view-header-horsepower=horsepower [PS]
-table-view-header-dailyRate=daily rate [\u20AC]
-table-view-header-doorCount=door count
-table-view-header-drivenDistance=driven distance [km]
-table-view-header-category=category
-table-view-header-color=color
-table-view-header-constructionYear=construction year
-table-view-header-defects=defects
-table-view-header-fuel=fuel
-table-view-header-gearbox=gearbox
-table-view-header-licenseNumber=license number
-table-view-header-model=model
-table-view-header-nextInspection=next inspection
-table-view-header-parkingLot=parking lot
-table-view-header-tires=tires
-table-view-header-vin=vehicle ident number
-
-# Employee Table View
-table-view-employee-header-id=ID
-table-view-employee-header-firstName=First Name
-table-view-employee-header-lastName=Last Name
-table-view-employee-header-position=Position
-
-# Customer Table View
-table-view-customer-header-id=ID
-table-view-customer-header-dateOfBirth=Date of birth
-table-view-customer-header-driverLicenseId=Driver License ID
-table-view-customer-header-emailAddress=Email Address
-table-view-customer-header-firstName=First name
-table-view-customer-header-lastName=Last Name
-table-view-customer-header-phoneNumber=Phone Number
-table-view-customer-header-houseNumber=House Number
-table-view-customer-header-street=Street
-table-view-customer-header-city=City
-table-view-customer-header-idNumber=ID Number
-table-view-customer-header-zipCode=Zip Code
-
-# Rental Table View
-table-view-rental-header-id=ID
-table-view-rental-header-begin=Begin
-table-view-rental-header-car=Car
-table-view-rental-header-customer=Customer
-table-view-rental-header-employee=Employee
-table-view-rental-header-end=End
-table-view-rental-header-extraCosts=Extra costs
-table-view-rental-header-note=Note
-
-
-button-edit-label=Edit...
+# Button Strings
 button-new-label=New...
+button-edit-label=Edit...
 button-delete-label=Delete...
 button-rent-label=Rent...
-
-dialog-confirmation-title=Confirmation
-dialog-information-title=Information
-dialog-confirmation-header-delete=Do you really want to remove the selected object?
-dialog-information-header-no-object-selected=Please select an object to remove first.
-dialog-information-header-about=This software is a studentproject to implement a carrental application.\nDeveloped by: Lukas Raubuch, Arthur Kelsch, Michael BÃ¶s, Jens Thewes, Hagen Schackmann, Julian Quint
-
-#Search Strings
-prompt-search-TextField=Search...
-prompt-search-ComboBoxField=Choose field
-prompt-search-ComboBoxComparator=Choose comparator
-
+button-cancel-label=Cancel
+button-apply-label=Apply
 button-applyCurrentFilter-label=Search
 button-removeCurrentFilter-label=Clear filter
 
-search-combobox-id=ID
-search-combobox-brand=brand
-search-combobox-horsepower=horsepower [PS]
-search-combobox-dailyRate=daily rate [\u20AC]
-search-combobox-doorCount=door count
-search-combobox-drivenDistance=driven distance [km]
-search-combobox-category=category
-search-combobox-color=color
-search-combobox-constructionYear=construction year
-search-combobox-defects=defects
-search-combobox-fuel=fuel
-search-combobox-gearbox=gearbox
-search-combobox-licenseNumber=license number
-search-combobox-model=model
-search-combobox-nextInspection=next inspection
-search-combobox-parkingLot=parking lot
-search-combobox-tires=tires
-search-combobox-vin=vehicle ident number
+# Dialog Strings
+dialog-information-title=Information
+dialog-confirmation-title=Confirmation
+dialog-cancel-creation-confirmation-header=Do you really want to cancel the dialog?
+dialog-apply-creation-confirmation-header=Do you really want to apply?
+dialog-confirmation-header-delete=Do you really want to remove the selected object?
+dialog-information-header-no-object-selected=Please select an object to remove first.
+dialog-information-header-about=This software is a studentproject to implement a carrental application.\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch, Michael Bös
 
+# Search Strings
+prompt-search-TextField=Search...
+prompt-search-ComboBoxField=Choose field
+prompt-search-ComboBoxComparator=Choose comparator
 search-combobox-equals==
 search-combobox-greater=>
 search-combobox-smaller=<
 search-combobox-like=like
 
-search-employee-combobox-id=ID
-search-employee-combobox-firstName=First Name
-search-employee-combobox-lastName=Last Name
-search-employee-combobox-position=Position
-
-search-customer-combobox-id=ID
-search-customer-combobox-dateOfBirth=Date of birth
-search-customer-combobox-driverLicenseId=Driver license ID
-search-customer-combobox-emailAddress=Email address
-search-customer-combobox-firstName=First name
-search-customer-combobox-houseNumber=House number
-search-customer-combobox-lastName=Last name
-search-customer-combobox-phoneNumber=Phone number
-search-customer-combobox-street=Street
-search-customer-combobox-city=City
-search-customer-combobox-idNumber=ID number
-search-customer-combobox-zipCode=Zip Code
-
-search-rental-combobox-id=ID
-search-rental-combobox-begin=Begin
-search-rental-combobox-car=Car
-search-rental-combobox-customer=Customer
-search-rental-combobox-employee=Employee
-search-rental-combobox-end=End
-search-rental-combobox-extraCosts=Extra Costs
-search-rental-combobox-note=Note
-
 # Menubar Strings
 menubar-view-file=File
 menubar-view-edit=Edit
 menubar-view-help=Help
-menubar-operation-close=Close
-menubar-operation-delete=Delete
-menubar-operation-edit=Edit
 menubar-operation-new=New
+menubar-operation-edit=Edit
+menubar-operation-delete=Delete
+menubar-operation-close=Close
 menubar-operation-rent=Rent
 menubar-operation-about=About
 menubar-operation-employees=Employees
@@ -136,7 +44,8 @@ menubar-operation-cars=Cars
 menubar-operation-rentals=Rentals
 menubar-operation-customers=Customers
 
-#Car Configuration View Strings
+# Car Strings
+car-id-label=ID
 car-brand-label=Brand
 car-model-label=Model
 car-category-label=Category
@@ -144,52 +53,53 @@ car-color-label=Color
 car-constructionYear-label=Construction Year
 car-drivenDistance-label=Driven Distance [km]
 car-gearBox-label=Gearbox
-car-horsePower-label=Horse Power [PS]
+car-horsePower-label=Horsepower [PS]
 car-fuel-label=Fuel
 car-doorCount-label=Door Count
 car-tires-label=Tires
 car-nextInspection-label=Next Inspection
-car-vin-label=VIN
+car-vin-label=Vehicle Ident Number
 car-equipment-label=Equipment
 car-defects-label=Defects
 car-licenceNumber-label=License Number
 car-dailyRate-label=Daily Rate [\u20AC]
 car-parkingLot-label=Parking Lot
 
-car-gearBox-manual=Manual
-car-gearBox-semiautomatic=Semi-automatic
-car-gearBox-automatic=Automatic
+car-gearBox-automatic-label=Automatic
+car-gearBox-manual-label=Manual
+car-gearBox-semiAutomatic-label=Semi-automatic
 
-car-fuel-petrol=Petrol
-car-fuel-diesel=Diesel
-car-fuel-electric=Electric
+car-fuel-diesel-label=Diesel
+car-fuel-electric-label=Electric
+car-fuel-gasoline-label=Gasoline
+car-fuel-hyrbid-label=Hybrid
 
-car-cancel-button=Cancel
-car-apply-button=Apply
+# Customer Strings
+customer-id-label=ID
+customer-firstName-label=First Name
+customer-lastName-label=Last Name
+customer-email-label=Email
+customer-phoneNumber-label=Phone Number
+customer-dateOfBirth-label=Date of Birth
+customer-street-label=Street
+customer-houseNumber-label=House Number
+customer-city-label=City
+customer-zipCode-label=Zip Code
+customer-idNumber-label=ID Number
+customer-driverLicenseId-label=Driver License ID
 
-dialog-cancel-creation-confirmation-title=Confirmation
-dialog-cancel-creation-confirmation-header=Do you really want to cancel the dialog?
+# Employee Strings
+employee-id-label=ID
+employee-firstName-label=First Name
+employee-lastName-label=Last Name
+employee-position-label=Position
 
-dialog-apply-creation-confirmation-title=Confirmation
-dialog-apply-creation-confirmation-header=Do you really want to apply?
-
-#Customer View Strings
-first-name-label=First Name
-last-name-label=Last Name
-email-label=Email
-phonenumber-label=Phone Number
-dateofbrith-label=Date of Birth
-street-label=Street
-housenumber-label=House Number
-city-label=City
-zipcode-label=Zip Code
-idnumber-label=ID Number
-driverlicenseid-label=Driver License ID
-
-#Employee View Strings
-first-name-label=First Name
-last-name-label=Last Name
-position-label=Position
-
-cancel-button=Cancel
-apply-button=Apply
+# Rental Strings
+rental-id-label=ID
+rental-begin-label=Begin
+rental-car-label=Car
+rental-customer-label=Customer
+rental-employee-label=Employee
+rental-end-label=End
+rental-extraCosts-label=Extra costs
+rental-note-label=Note
