Fix minor typos and adjust "About" text

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -18,7 +18,7 @@ dialog-cancel-creation-confirmation-header=Möchten Sie den Dialog wirklich abbre
 dialog-apply-creation-confirmation-header=Möchten Sie wirklich anwenden?
 dialog-confirmation-header-delete=Möchten Sie das ausgewählte Objekt wirklich löschen?
 dialog-information-header-no-object-selected=Bitte zunächst zu löschendes Objekt auswählen.
-dialog-information-header-about=Diese Software ist ein Studentenprojekt zur Implementierung einer Autoverwaltung/Autovermietung.\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch, Michael Bös
+dialog-information-header-about=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\nEntwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bös
 
 # Search Strings
 prompt-search-TextField=Suche...
@@ -72,7 +72,7 @@ car-gearBox-semiAutomatic-label=Halbautomatik
 car-fuel-diesel-label=Diesel
 car-fuel-electric-label=Elektro
 car-fuel-gasoline-label=Benzin
-car-fuel-hyrbid-label=Hybrid
+car-fuel-hybrid-label=Hybrid
 
 # Customer Strings
 customer-id-label=ID
