--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -1,5 +1,5 @@
 # General Strings
-stage-title=Carrental
+stage-title=Car Rental
 
 # Button Strings
 button-new-label=New...
@@ -18,7 +18,7 @@ dialog-cancel-creation-confirmation-header=Do you really want to cancel the dial
 dialog-apply-creation-confirmation-header=Do you really want to apply?
 dialog-confirmation-header-delete=Do you really want to remove the selected object?
 dialog-information-header-no-object-selected=Please select an object to remove first.
-dialog-information-header-about=This software is a studentproject to implement a carrental application.\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch, Michael Bös
+dialog-information-header-about=This program is a student project as part of the Programing 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
 
 # Search Strings
 prompt-search-TextField=Search...
@@ -72,7 +72,7 @@ car-gearBox-semiAutomatic-label=Semi-Automatic
 car-fuel-diesel-label=Diesel
 car-fuel-electric-label=Electric
 car-fuel-gasoline-label=Gasoline
-car-fuel-hyrbid-label=Hybrid
+car-fuel-hybrid-label=Hybrid
 
 # Customer Strings
 customer-id-label=ID
