Fix mnemonics in menu bar

--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -30,9 +30,9 @@ search-combobox-smaller=<
 search-combobox-like=like
 
 # Menubar Strings
-menubar-view-file=File
-menubar-view-edit=Edit
-menubar-view-help=Help
+menubar-view-file=_File
+menubar-view-edit=_Edit
+menubar-view-help=_Help
 menubar-operation-new=New
 menubar-operation-edit=Edit
 menubar-operation-delete=Delete
