Added Localisation Strings for TitleLabel in New*View and Edit*View

--- a/src/main/resources/bundles/components_de.properties
+++ b/src/main/resources/bundles/components_de.properties
@@ -45,6 +45,8 @@ menubar-operation-rentals=Vermietungen
 menubar-operation-customers=Kunden
 
 # Car Strings
+car-new-title-label=Neues Auto
+car-edit-title-label=Auto bearbeiten
 car-id-label=ID
 car-brand-label=Marke
 car-model-label=Modell
@@ -75,6 +77,8 @@ car-fuel-gasoline-label=Benzin
 car-fuel-hybrid-label=Hybrid
 
 # Customer Strings
+customer-new-title-label=Neuer Kunde
+customer-edit-title-label=Kunde anpassen
 customer-id-label=ID
 customer-firstName-label=Vorname
 customer-lastName-label=Nachname
@@ -89,6 +93,8 @@ customer-idNumber-label=Ausweisnummer
 customer-driverLicenseId-label=Führerscheinnummer
 
 # Employee Strings
+employee-new-title-label=Neuer Angestellter
+employee-edit-title-label=Angestellten anpassen
 employee-id-label=ID
 employee-firstName-label=Vorname
 employee-lastName-label=Nachname
