--- a/src/main/resources/bundles/components_en.properties
+++ b/src/main/resources/bundles/components_en.properties
@@ -18,7 +18,7 @@ dialog-cancel-creation-confirmation-header=Do you really want to cancel the dial
 dialog-apply-creation-confirmation-header=Do you really want to apply?
 dialog-confirmation-header-delete=Do you really want to remove the selected object?
 dialog-information-header-no-object-selected=Please select an object to remove first.
-dialog-information-header-about=This program is a student project as part of the Programing 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
+dialog-information-header-about=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
 
 # Search Strings
 prompt-search-TextField=Search...
@@ -45,6 +45,8 @@ menubar-operation-rentals=Rentals
 menubar-operation-customers=Customers
 
 # Car Strings
+car-new-title-label=New Car
+car-edit-title-label=Edit Car
 car-id-label=ID
 car-brand-label=Brand
 car-model-label=Model
@@ -75,6 +77,8 @@ car-fuel-gasoline-label=Gasoline
 car-fuel-hybrid-label=Hybrid
 
 # Customer Strings
+customer-new-title-label=New Customer
+customer-edit-title-label=Edit Customer
 customer-id-label=ID
 customer-firstName-label=First Name
 customer-lastName-label=Last Name
@@ -89,6 +93,8 @@ customer-idNumber-label=ID Number
 customer-driverLicenseId-label=Driver License ID
 
 # Employee Strings
+employee-new-title-label=New Employee
+employee-edit-title-label=Edit Employee
 employee-id-label=ID
 employee-firstName-label=First Name
 employee-lastName-label=Last Name
